Changes in overall html and css, added bootstrap

--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
         <meta charset="utf-8">
         <title>Agenda Médica</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>Agenda</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="container-fluid">
+            <div class="row ml-2 mr-2 mt-3 h-200">
+                <div class="col-8 pr-3">
+                    <ol class="agenda container-fluid">
+                        <li class="row p-2">
+                            <div class="col-2 border text-center">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 border text-left">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 border text-center p-4">
+                                X
+                            </div>
+                        </li>
+                        <li class="row p-2">
+                            <div class="col-2 border text-center">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 border text-left">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 border text-center p-4">
+                                X
+                            </div>
+                        </li>
+                        <li class="row p-2">
+                            <div class="col-2 border text-center">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 border text-left">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 border text-center p-4">
+                                X
+                            </div>
+                        </li>
+                        <li class="row p-2">
+                            <div class="col-2 border text-center">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 border text-left">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 border text-center p-4">
+                                X
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="col-4 border text-center">
+                    <p class="info">Informações</p>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     </body>
 </html>
