Some changes in overall style

--- a/index.html
+++ b/index.html
@@ -10,67 +10,25 @@
         <div class="container-fluid">
             <div class="row ml-2 mr-2 mt-3 h-200">
                 <div class="col-8 pr-3">
-                    <ol class="agenda container-fluid">
-                        <li class="row p-2">
-                            <div class="col-2 border text-center">
+                    <div class="agenda container-fluid">
+                        <div class="row">
+                            <div class="col-2 text-center marcacao data" style="border-radius: 20px 0px 0px 20px;">
                                 <br>Data<br><br>
                                 Hora
                             </div>
-                            <div class="col-9 border text-left">
+                            <div class="col-9 dados text-left marcacao">
                                 Paciente<br>
                                 Médico<br><br>
                                 Telefone
                             </div>
-                            <div class="col-1 border text-center p-4">
+                            <div class="col-1 text-center marcacao botaodireita" style="border-radius: 0px 20px 20px 0px; vertical-align: middle;">
                                 X
                             </div>
-                        </li>
-                        <li class="row p-2">
-                            <div class="col-2 border text-center">
-                                <br>Data<br><br>
-                                Hora
-                            </div>
-                            <div class="col-9 border text-left">
-                                Paciente<br>
-                                Médico<br><br>
-                                Telefone
-                            </div>
-                            <div class="col-1 border text-center p-4">
-                                X
-                            </div>
-                        </li>
-                        <li class="row p-2">
-                            <div class="col-2 border text-center">
-                                <br>Data<br><br>
-                                Hora
-                            </div>
-                            <div class="col-9 border text-left">
-                                Paciente<br>
-                                Médico<br><br>
-                                Telefone
-                            </div>
-                            <div class="col-1 border text-center p-4">
-                                X
-                            </div>
-                        </li>
-                        <li class="row p-2">
-                            <div class="col-2 border text-center">
-                                <br>Data<br><br>
-                                Hora
-                            </div>
-                            <div class="col-9 border text-left">
-                                Paciente<br>
-                                Médico<br><br>
-                                Telefone
-                            </div>
-                            <div class="col-1 border text-center p-4">
-                                X
-                            </div>
-                        </li>
-                    </ol>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-4 border text-center">
-                    <p class="info">Informações</p>
+                <div class="col-4 info text-center" style="border-radius: 20px;">
+                    <span style="background-color: transparent;">Informações</span>
                 </div>
             </div>
         </div>
