--- a/index.html
+++ b/index.html
@@ -12,16 +12,58 @@
                 <div class="col-8 pr-3">
                     <div class="agenda container-fluid">
                         <div class="row">
-                            <div class="col-2 text-center marcacao data" style="border-radius: 20px 0px 0px 20px;">
+                            <div class="col-2 text-center marcacao data">
                                 <br>Data<br><br>
                                 Hora
                             </div>
-                            <div class="col-9 dados text-left marcacao">
+                            <div class="col-9 text-left marcacao dados">
                                 Paciente<br>
                                 Médico<br><br>
                                 Telefone
                             </div>
-                            <div class="col-1 text-center marcacao botaodireita" style="border-radius: 0px 20px 20px 0px; vertical-align: middle;">
+                            <div class="col-1 text-center marcacao botaodireita">
+                                X
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2 text-center marcacao data">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 text-left marcacao dados">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 text-center marcacao botaodireita">
+                                X
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2 text-center marcacao data">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 text-left marcacao dados">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 text-center marcacao botaodireita">
+                                X
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2 text-center marcacao data ultima">
+                                <br>Data<br><br>
+                                Hora
+                            </div>
+                            <div class="col-9 text-left marcacao dados ultima">
+                                Paciente<br>
+                                Médico<br><br>
+                                Telefone
+                            </div>
+                            <div class="col-1 text-center marcacao botaodireita ultima">
                                 X
                             </div>
                         </div>
