--- a/index.html
+++ b/index.html
@@ -4,64 +4,69 @@
         <meta charset="utf-8">
         <title>Agenda Médica</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="fontawesome/css/all.min.css">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="iconic/font/css/open-iconic-bootstrap.min.css">
+        <link rel="stylesheet" href="fontawesome/css/all.css">
     </head>
-    <body>
+    <body onload="mostra()">
         <div class="container-fluid">
-            <div class="row ml-2 mr-2 mt-3">
-                <div class="col-8 pr-3">
-                    <div class="container-fluid">
-                        <div class="row agenda">
+            <div class="row mt-3">
+                <div class="col-7 col-lg-7 col-md-12 col-sm-12 col-xs-12">
+                    <div class="container-fluid" id="agenda">
+                        <div class="row" id="agendado">
                             <div class="col-2 text-center marcacao data">
-                                <span class="dia-mes">13 Jul</span>
-                                <span class="hora btn text-white border border-white">
-                                    08:00
-                                </span>
+                                <span class="dia-mes-agenda"></span>
+                                <span class="hora-agenda btn text-white border border-white"></span>
                             </div>
                             <a class="col-9 text-left marcacao dados">
-                                Abelardo Castro de Araújo Júnior<br>
-                                Daniela Trindade<br><br>
-                                (31) 9988 - 7198
-                                <span class="status">AGENDADO</span>
+                                <span class="nome-agenda"></span>
+                                <span class="medico-agenda"></span>
+                                <span class="icone-telefone fas fa-phone-alt"></span>
+                                <span class="telefone-agenda"></span>
+                                <span class="status-agenda"></span>
                             </a>
                             <a class="col-1 text-center marcacao botaodireita">
                                 <span class="oi oi-x"></span>
                             </a>
                         </div>
-                        <div class="row agenda">
-                            <div class="col-2 text-center marcacao data ultima">
-                                <span class="dia-mes">13 Jul</span>
-                                <span class="hora btn text-white border border-white">
-                                    08:30
-                                </span>
+                        <div class="row" id="disponivel">
+                            <div class="col-2 text-center marcacao data">
+                                <span class="dia-mes-agenda"></span>
+                                <span class="hora-agenda btn text-white border border-white"></span>
                             </div>
-                            <a class="col-9 text-left marcacao dados ultima">
-                                DISPONÍVEL
+                            <a class="col-9 text-center marcacao dados">
+                                <span class="disponivel"></span>
                             </a>
-                            <a class="col-1 marcacao botaodireita ultima">
-                                <span class="oi oi-plus"></span>
+                            <a class="col-1 marcacao botaodireita">
+                                <span class="oi oi-chevron-right"></span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 info">
-                    <i class="fas fa-portrait foto"></i><br><br>
-                    <div class="nome">ABELARDO CASTRO DE ARAUJO JUNIOR</div><br>
-                    Data Hora<span style="padding-left: 60%; background: inherit;">Status</span><br>
-                    <span style="background: inherit;">
-                        "Telefone"      "Email" <br>
-                        Telefone        Email <br><br>
-                        <hr><br>
-                        Médico <br>
-                        Tipo de consulta
-                    </span>
+                <div class="col-5 col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <div class="info">
+                        <i class="fas fa-portrait foto-info"></i>
+                        <div class="nome-info">ABELARDO CASTRO DE ARAUJO JUNIOR</div>
+                        <div class="data-hora-info">
+                            13 Jul, 07:00 - 07:30
+                            <span class="status-info">AGENDADO</span>
+                        </div>
+                        <div class="container-fluid row contato-info">
+                            <div class="col-5 telefone-info">
+                                Telefone <br>
+                                <span class="icone-telefone fas fa-phone-alt"></span> (31) 9988 - 7198
+                            </div>
+                            <div class="col-7 email-info">
+                                Email <br>
+                                abel.cas.ar@gmail.com
+                            </div>
+                        </div>
+                        <hr>
+                        <span class="medico-info">Daniela Trindade</span>
+                    </div>
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+        <script src="agenda.js"></script>
     </body>
 </html>
