--- a/index.html
+++ b/index.html
@@ -12,26 +12,39 @@
     <body onload="mostra()">
         <div class="container-fluid">
             <div class="row mt-3 flex-row-reverse">
-                <div class="col-lg-5 col-md-12">
+                <div class="col-lg-5 col-md-12" id="informacoes">
                     <div class="info">
+                        <span class="data-hora" style="line-height: 150px;">Selecione um horário, as informações sobre ele aparecerão aqui</span>
+                    </div>
+                    <div class="info" id="infomarcada">
                         <i class="fas fa-portrait foto-info"></i>
-                        <div class="nome-info">ABELARDO CASTRO DE ARAUJO JUNIOR</div>
+                        <div class="nome-info">Abelardo Castro de Araújo Júnior</div>
                         <div class="data-hora-info">
-                            13 Jul, 07:00 - 07:30
+                            <span class="data-hora">13 Jul, 07:00</span>
                             <span class="status-info">AGENDADO</span>
                         </div>
                         <div class="container-fluid row contato-info">
-                            <div class="col-5 telefone-info">
-                                Telefone <br>
-                                <span class="icone-telefone fas fa-phone-alt"></span> (31) 9988 - 7198
+                            <div class="col-lg-12 col-md-6 col-sm-12 telefone-info">
+                                <span class="icone-telefone fas fa-phone-alt"></span>
+                                <span class="texto-telefone-info">Telefone: </span>
+                                <span class="numero-telefone-info">(31) 9988 - 7198</span>
                             </div>
-                            <div class="col-7 email-info">
-                                Email <br>
-                                abel.cas.ar@gmail.com
+                            <div class="col-lg-12 col-md-6 col-sm-12 email-info">
+                                <span class="icone-email fas fa-envelope"></span>
+                                <span class="texto-email-info">Email: </span>
+                                <span class="valor-email-info">abel.cas.ar@gmail.com</span>
                             </div>
                         </div>
                         <hr>
                         <span class="medico-info">Daniela Trindade</span>
+                    </div>
+                    <div class="info-disp" id="infodisponivel">
+                        <div class="nome-info">HORÁRIO DISPONÍVEL</div>
+                        <div class="data-hora-info">
+                            <span class="data-hora">13 Jul, 07:00</span>
+                            <span class="status-info">DISPONÍVEL</span>
+                        </div>
+                        <a class="marca">NOVA MARCAÇÃO</a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12">
@@ -41,7 +54,7 @@
                                 <span class="dia-mes-agenda"></span>
                                 <span class="hora-agenda btn text-white border border-white"></span>
                             </div>
-                            <a class="col-9 text-left dados">
+                            <a class="col-9 text-left dados" onclick="mostraInfoMarcada(this.parentElement.id)">
                                 <span class="nome-agenda"></span>
                                 <span class="medico-agenda"></span>
                                 <span class="icone-telefone fas fa-phone-alt"></span>
@@ -57,7 +70,7 @@
                                 <span class="dia-mes-agenda"></span>
                                 <span class="hora-agenda btn text-white border border-white"></span>
                             </div>
-                            <a class="col-9 text-center dados">
+                            <a class="col-9 text-center dados" onclick="mostraInfoDisponivel(this.parentElement)">
                                 <span class="disponivel"></span>
                             </a>
                             <a class="col-1 botaodireita">
